@@ -29,6 +29,8 @@ PHP                                                                        NEWS
     (ilutov)
   . Fix bug GH-10168, GH-10582 (Various segfaults with destructors and VM return
     values). (dstogov, nielsdos, ilutov)
+  . Fix bug GH-10935 (Use of trait doesn't redeclare static property if class
+    has inherited it from its parent). (ilutov)
 
 - Date:
   . Implement More Appropriate Date/Time Exceptions RFC. (Derick)
